--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "antd": "^3.26.6",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "download-file": "^0.1.5",
     "fs-extra": "^8.1.0",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
