--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "download-file": "^0.1.5",
     "fs-extra": "^8.1.0",
     "lodash": "^4.17.15",
+    "lowdb": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
