added more portocols

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "devtool",
     "devtools",
     "downlevel",
+    "gamedata",
     "headermenu",
     "hjson",
     "hotmail",
@@ -29,6 +30,7 @@
     "prskill",
     "ptype",
     "regist",
+    "savedata",
     "scrollbar",
     "sidemenu",
     "spectron",
