--- a/package.json
+++ b/package.json
@@ -164,6 +164,7 @@
     "fs-extra": "^8.1.0",
     "lodash": "^4.17.15",
     "lowdb": "^1.0.0",
+    "match-url-wildcard": "0.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
