added more interceptors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
     "modeltype",
     "noclose",
     "nsis",
+    "osapi",
     "polyfill",
     "prestart",
     "prettierrc",
@@ -34,11 +35,13 @@
     "savedata",
     "scrollbar",
     "sidemenu",
+    "smbeat",
     "spectron",
     "startbt",
     "tslib",
     "tspaths",
     "typechecking",
+    "unitia",
     "webdriverio",
     "webm",
     "webp",
